--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
   "env": {
     "APP_PUBLIC_URL": {
       "description": "Complete URL of your app including https (You can change it later in Config Vars)",
-      "value": "https://nehaghost.herokuapp.com"
+      "value": "https://templateappneha.herokuapp.com"
     },
     "S3_ACCESS_KEY_ID": {
       "description": "(Optional) Set your AWS Access Key ID to enable S3 file storage. Defaults to Cloudinary storage",
